--- a/hw-01.qmd
+++ b/hw-01.qmd
@@ -2,7 +2,6 @@
 title: "HW 01"
 author: "Shakir Ahmed"
 format: html
-date: 2023-09-08 (YYYY-MM-DD)
 toc: true
 ---
 
@@ -12,7 +11,9 @@ Setup of Library functions and installing packages needed for homework
 # Install & load packages
 #Accidents dataset is within dsbox package
 
-install.packages("pacman")
+
+if (!require("pacman"))
+  install.packages("pacman")
 pacman::p_load("tidyverse")
 pacman::p_load_gh("rstudio-education/dsbox")
 
@@ -182,7 +183,7 @@ ggplot(county %>% filter(!is.na(median_edu))) +
 
 **Answer-** The first plot of the data makes more sense as it shows the spread more distinctly (values) across the home ownership vs educational qualifications.
 
-c\. Recreate the R code necessary to generate the following graphs. Note that wherever a categorical variable is used in the plot, it\'s `metro`.
+c\. Recreate the R code necessary to generate the following graphs. Note that wherever a categorical variable is used in the plot, it's `metro`.
 
 ```{r plots_A_B, warning = FALSE, message=FALSE}
 
@@ -274,7 +275,7 @@ ggplot(data = county, aes(x = homeownership, y = poverty)) +
 
 ## 4 - Rental apartments in SF
 
-The data for this exercise comes from TidyTuesday and it's on rental prices in San Francisco. You can find out more about the dataset by inspecting its documentation [here](https://github.com/rfordatascience/tidytuesday/tree/master/data/2022/2022-07-05). The dataset you'll be using is called `rent`. Create a visualization that will help you compare the distribution of rental prices (`price`) per bedroom (`beds`) across neighborhoods (`nhood`) in the city of San Francisco (`city == "san francisco"`), over time. Limit your analysis to rentals where the full unit is available, i.e. (`room_in_apt	== 0`). You have the flexibility to choose which years and which neighborhoods. Note that you should have a maximum of 8 neighborhoods on your visualization, but one or more of them can be a combination of many (e.g., an "other" category). Your visualization should also display some measure of the variability in your data. You get to decide what type of visualization to create and there is more than one correct answer! In your answer, include a brief description of why you made the choices you made as well as an interpretation of the findings of how rental prices vary over time and neighborhoods in San Francisco.
+The data for this exercise comes from TidyTuesday and it's on rental prices in San Francisco. You can find out more about the dataset by inspecting its documentation [here](https://github.com/rfordatascience/tidytuesday/tree/master/data/2022/2022-07-05). The dataset you'll be using is called `rent`. Create a visualization that will help you compare the distribution of rental prices (`price`) per bedroom (`beds`) across neighborhoods (`nhood`) in the city of San Francisco (`city == "san francisco"`), over time. Limit your analysis to rentals where the full unit is available, i.e. (`room_in_apt == 0`). You have the flexibility to choose which years and which neighborhoods. Note that you should have a maximum of 8 neighborhoods on your visualization, but one or more of them can be a combination of many (e.g., an "other" category). Your visualization should also display some measure of the variability in your data. You get to decide what type of visualization to create and there is more than one correct answer! In your answer, include a brief description of why you made the choices you made as well as an interpretation of the findings of how rental prices vary over time and neighborhoods in San Francisco.
 
 This code snippet retrieves rental data from a GitHub repository using R's "read.csv()" function. The dataset, part of the TidyTuesday project, will be the foundation for data analysis and visualization task, enabling insights into rental prices and patterns for the city of San Francisco.
 
@@ -322,11 +323,11 @@ ggplot(data = filtered_data, aes(x = year, y = nhood, fill = price_per_bedroom))
 
 ## 5 - Napoleon's march.
 
-The instructions for this exercise are simple: recreate the Napoleon\'s march plot by Charles John Minard in ggplot2. The data is provided as a list, saved as `napoleon.rds`. Read it in using `read_rds()`. This object has three elements: `cities`, `temperatures`, and `troops`. Each of these is a data frame, and the three of them combined contain all of the data you need to recreate the visualization. Your goal isn\'t to create an exact replica of the original plot, but to get as close to it as you can using code you understand and can describe articulately in your response. I\'ll be the first to say that if you google \"Napoleon\'s march in ggplot2\", you\'ll find a bunch of blog posts, tutorials, etc. that walk you through how to recreate this visualization with ggplot2. So you might be thinking, \"why am I being asked to copy something off the internet for my homework?\" Well, this is an exercise in (1) working with web resources and citing them properly, (2) understanding someone else\'s ggplot2 code and reproducing their work, (3) describing what that code does in your own words, and finally (4) putting some final touches to make the final product your own. Some more guidelines below:
+The instructions for this exercise are simple: recreate the Napoleon's march plot by Charles John Minard in ggplot2. The data is provided as a list, saved as `napoleon.rds`. Read it in using `read_rds()`. This object has three elements: `cities`, `temperatures`, and `troops`. Each of these is a data frame, and the three of them combined contain all of the data you need to recreate the visualization. Your goal isn't to create an exact replica of the original plot, but to get as close to it as you can using code you understand and can describe articulately in your response. I'll be the first to say that if you google "Napoleon's march in ggplot2", you'll find a bunch of blog posts, tutorials, etc. that walk you through how to recreate this visualization with ggplot2. So you might be thinking, "why am I being asked to copy something off the internet for my homework?" Well, this is an exercise in (1) working with web resources and citing them properly, (2) understanding someone else's ggplot2 code and reproducing their work, (3) describing what that code does in your own words, and finally (4) putting some final touches to make the final product your own. Some more guidelines below:
 
--   You should make sure your response properly cites all of the resources you use. I\'m defining \"use\" to include \"browse, read, get inspired by, or directly borrow snippets of code from\". You don\'t need to worry about formal citations, it\'s okay to make a list with links to your resources and provide a brief summary of how you used each one.
+-   You should make sure your response properly cites all of the resources you use. I'm defining "use" to include "browse, read, get inspired by, or directly borrow snippets of code from". You don't need to worry about formal citations, it's okay to make a list with links to your resources and provide a brief summary of how you used each one.
 
--   For this exercise, you\'re asked to describe what your code does (instead of interpreting the visualization, since we already did that in class). If you write the code, it should be straightforward for you to describe it. If you borrow any code from outside resources, you need to understand what that code does, and describe it, ***in your own words***. (This is important, you\'re allowed to use found code, but you are not allowed to copy someone\'s blog post or tutorial as your description of their code.)
+-   For this exercise, you're asked to describe what your code does (instead of interpreting the visualization, since we already did that in class). If you write the code, it should be straightforward for you to describe it. If you borrow any code from outside resources, you need to understand what that code does, and describe it, ***in your own words***. (This is important, you're allowed to use found code, but you are not allowed to copy someone's blog post or tutorial as your description of their code.)
 
 -   Finally, you should personalize the visualization with your own touch. You can do this in a myriad of ways, e.g., change colors, annotations, labels, etc. This change should be made to make the plot more like the original in some way. You need to explicitly call out what change you made and why you made it.
 
@@ -348,7 +349,7 @@ The instructions for this exercise are simple: recreate the Napoleon\'s march pl
     library(grid)          # combining plots
     library(gridExtra)     # combining plots
     library(dplyr)         # tidy data manipulations
-
+    install.packages("HistData")
     #Code is to read the data from the HistData package
     #Troop data
     data(Minard.troops, package="HistData")
