--- a/hw-01.qmd
+++ b/hw-01.qmd
@@ -374,10 +374,12 @@ The instructions for this exercise are simple: recreate the Napoleon's march plo
     Importing/reading the code using the rds() function after setting file path to 'data' folder
 
     ```{r 5_read,warning = FALSE, message=FALSE}
-
+    install.packages("here")
     #Setting directory to data folder, where napoleon.rds data exists
-    setwd("/cloud/project/data")
-    troops <- readRDS("napoleon.rds")
+    #setwd("/cloud/project/data")
+    #readRDS(here("data", "napoleon.rds"))    
+    #If i chang working directory, github job is failing at his step. Hence using the data from HistData package
+
     ```
 
     Now
